today add javascript update

--- a/index.html
+++ b/index.html
@@ -14,8 +14,10 @@
                 <img src="./images/adidas.png" alt="adidas">
             </div>
             <div class="info">
-                <h1 class="title">Adidas</h1>
-                <h3>FUTURE-READY</h3>
+                <h1 class="title">Adidas ZY</h1>
+                <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                     Fugiat exercitationem doloremque quas error?
+                      </h3>
             </div>
             <div class="sizes">
                 <button>39</button>
